8143151: [JVMCI] assertion for allocation of "too many" CompileTasks must take JVMCI into account

Reviewed-by: iignatyev, twisti